# dune-parafields

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  BSD  CMakeLists.txt  LICENSE.md  README.md  config.h.cmake  dune-parafields.pc.in  dune.module
cmake/modules/: AddFFTW3Flags.cmake  AddHDF5Flags.cmake  CMakeLists.txt  DuneParafieldsMacros.cmake  DuneRandomfieldMacros.cmake  FindFFTW3.cmake
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/parafields/: CMakeLists.txt  covariance.hh  fieldtraits.hh  io.hh  legacyvtk.hh  matrix.hh  mutators.hh  optproblem.hh  pngreader.hh  randomfield.hh  stochastic.hh  trend.hh
dune/parafields/backends/: CMakeLists.txt  cpprngbackend.hh  dctdstfieldbackend.hh  dctmatrixbackend.hh  dftfieldbackend.hh  dftmatrixbackend.hh  fftwwrapper.hh  gslrngbackend.hh  r2cfieldbackend.hh  r2cmatrixbackend.hh
dune/randomfield/: CMakeLists.txt  covariance.hh  dftmatrix.hh  fieldtraits.hh  io.hh  legacyvtk.hh  matrix.hh  mutators.hh  optproblem.hh  pngreader.hh  randomfield.hh  stochastic.hh  trend.hh
dune/randomfield/backends/: CMakeLists.txt  cpprngbackend.hh  dctdstfieldbackend.hh  dctmatrixbackend.hh  dftfieldbackend.hh  dftmatrixbackend.hh  fftwwrapper.hh  gslrngbackend.hh  r2cfieldbackend.hh  r2cmatrixbackend.hh
src/: CMakeLists.txt  fieldgenerator.cc
test/: CMakeLists.txt  fieldtest.cc  perm.props  randomfield1d.ini  randomfield2d.ini  randomfield3d.ini  randomfield4d.ini
